feat(#15) Refactoring + save validation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -50,7 +50,7 @@
   "contactDeleteButton": "Delete this contact",
   "contactDeleteQuestion":"Do you really want to delete this contact ?",
   "contactDetail":"Contact details",
-  "contactLeaveMessage":"The contact contains some validation errors and has not been saved. Do you still want to go to the building contact list?",
+  "contactLeaveMessage":"The contact contains some validation errors and has not been saved. Do you still want to go to the building's contact list?",
   "container":"Container",
   "containerCapacity":"Container capacity",
   "containerCapacityValidationMessage":"*Capacity must be a valid decimal.",
@@ -100,11 +100,12 @@
   "fireAlarmPanelDelete":"Delete this alarm panel",
   "fireAlarmPanelDeleteQuestion":"Do you really want to delete this alarm panel?",
   "fireAlarmPanelDetail":"Alarm panel details",
-  "fireAlarmPanelLeaveMessage":"The alarm panel contains some validation errors and has not been saved. Do you still want to go to the building fire safety list?",
+  "fireAlarmPanelLeaveMessage":"The alarm panel contains some validation errors and has not been saved. Do you still want to go to the building's fire safety list?",
   "fireHydrantDelete":"Delete fire hydrant",
   "fireHydrantDeleteQuestion":"Do you really want to delete the link between this fire hydrant and the building?",
   "fireHydrantDetail":"Fire hydrant's details",
   "fireHydrantGeoPositionHolder":"Click on the map to locate...",
+  "fireHydrantLeaveMessage":"The fire hydrant contains some validation errors and has not been saved. Do you still want to go to the city's fire hydrant list?",
   "fireHydrantList":"Fire hydrant list",
   "fireHydrants":"Fire hydrants",
   "fireHydrantLocationType":"Location type",
@@ -114,7 +115,7 @@
   "fireSprinklerDelete":"Delete fire sprinkler",
   "fireSprinklerDeleteQuestion":"Do you really want to delete this sprinkler ?",
   "fireSrinklerDetail":"Fire sprinkler details",
-  "fireSprinklerLeaveMessage":"The sprinkler contains some validation errors and has not been saved. Do you still want to go to the building fire safety list?",
+  "fireSprinklerLeaveMessage":"The sprinkler contains some validation errors and has not been saved. Do you still want to go to the building's fire safety list?",
   "fireStation":"Fire station",
   "fireStationRequired":"*Fire station is required.",
   "firstName":"First name",
@@ -130,7 +131,7 @@
   "hazardousMaterialDelete":"Delete this hazardous material...",
   "hazardousMaterialDeleteQuestion":"Do you really want to delete this material ?",
   "hazardousMaterialDetail":"Hazardous material details",
-  "hazardousMaterialLeaveMessage":"The hazardous material contains some validation errors and has not been saved. Do you still want to go to the building hazardous material list?",
+  "hazardousMaterialLeaveMessage":"The hazardous material contains some validation errors and has not been saved. Do you still want to go to the building's hazardous material list?",
   "height":"Height",
   "heightValidationMessage":"*Height must be a valid decimal (ex.:999.99)",
   "homePhone":"Home phone",
@@ -193,7 +194,7 @@
   "pnapDetailContactNameHolder":"Name of the contact",
   "pnapDetailNameHolder":"Name of the person",
   "pnapEveningResident":"Evening resident",
-  "pnapLeaveMessage":"The PNAP contains some validation errors and has not been saved. Do you still want to go to the building PNAP list ?",
+  "pnapLeaveMessage":"The PNAP contains some validation errors and has not been saved. Do you still want to go to the building's PNAP list ?",
   "pnapNightResident":"Night resident",
   "pnapNumber":"Number",
   "pnapNumberValidationMessage":"*The number must be a valid integer.",
