feat(#116) Adding tranlation for items in SketchTool

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -12,11 +12,14 @@
   "addFireSprinklerButton":"Ajouter un gicleur...",
   "addHazardousMaterialButton":"Ajouter une matière dangereuse...",
   "addLaneButton":"Ajouter une voie...",
+  "addPictogram":"Ajouter un pictogramme",
   "addPnapButton":"Ajouter un PNAP...",
+  "addGeometricShape":"Ajouter une forme",
   "addThemeButton":"Ajouter un nouveau thème...",
   "affectation":"Affectation",
   "approximate":"Approximatif",
   "backToBuildingList":"Retourner à la liste des batîments",
+  "bringToFront":"Mettre à l'avant",
   "building":"Batîment",
   "buildingAnomalies":"Anomalies du btaîment",
   "buildingContact": "Contacts du batîment",
@@ -29,6 +32,7 @@
   "cancel":"Annuler",
   "capacity":"Capacité",
   "cellular":"Cellulaire",
+  "circle": "Cercle",
   "choose":"Choisir...",
   "chooseFireStation":"Choose a fire station",
   "code":"Code",
@@ -56,7 +60,10 @@
   "courseLaneDetail":"Détails de la voie",
   "courseLaneValidationMessage":"Vous devez sélectionner une caserne avant de pouvoir ajouter une rue.",
   "courseOrderChange":"Changer l'ordre",
+  "crop": "Rogner",
+  "cross": "Croix",
   "date":"Date",
+  "delete": "Supprimer",
   "description":"Description",
   "detached":"Détaché",
   "dieValidationMessage":"*Le DIE doit être une valeur entière et valide supérieure ou égale à 0.",
@@ -64,6 +71,7 @@
   "division":"Section",
   "done":"Terminer",
   "doorHangerLeft":"Accroche-porte laissé",
+  "edition":"Édition",
   "extension":"Extension",
   "finish":"Terminer",
   "fireAlarmPanel":"Panneaux d'alarme",
@@ -91,6 +99,7 @@
   "garage":"Garage",
   "gasInlet":"Entrée de gaz",
   "generalInformation":"Infos générales",
+  "group": "Grouper",
   "hazardousMaterial":"Hazardous materials",
   "hazardousMaterialDelete":"Supprimer cette matière...",
   "hazardousMaterialDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette matière dangereuse ?",
@@ -120,6 +129,7 @@
   "laneRequired":"*La voie est requise.",
   "lastName":"Nom",
   "lastNameRequired":"Le nom est requis.",
+  "line": "Ligne",
   "loading":"Chargement...",
   "Localization":"Localisation",
   "login":"CONNEXION",
@@ -166,6 +176,7 @@
   "quantity":"Quantité",
   "quantityValidationMessage":"*La quantité doit être une valeur entière valide.",
   "reason":"Raison",
+  "rectangle": "Rectangle",
   "risk":"Risque",
   "riskLevel": "Niveau de risque",
   "roof":"Toit",
@@ -174,6 +185,7 @@
   "search":"Recherche",
   "searchHolder":"Recherche...",
   "securityPerimeter":"Périmètre de sécurité",
+  "sendToBack":"Mettre à l'arrière",
   "siding":"Revêtement",
   "start": "Démarrer",
   "street":"Rue",
@@ -188,6 +200,7 @@
   "tankTypeUndetermined":"Indéterminé",
   "tankTypeUnderground":"Sous-terre",
   "tankTypeAboveground":"Hors-terre",
+  "text": "Texte",
   "theme":"Thème",
   "themeCreationTitle":"*Nouveau thème",
   "themeCreationMessage":"Entrez le nom du nouveau thème",
@@ -195,6 +208,7 @@
   "themeSelection":"Séléction d'un thème",
   "themeValidationMessage":"*Le thème ne doit pas être vide.",
   "transversal":"Transversale",
+  "triangle": "Triangle",
   "type":"Type",
   "typeRequired":"*Le type est requis.",
   "unit":"Unité",
