--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,10 +13,12 @@
   "addHazardousMaterialButton":"Add hazardous material...",
   "addLaneButton":"Add a lane...",
   "addPnapButton":"Add a PNAP...",
+  "addGeometricShape":"Add a shape",
   "addThemeButton":"Add a new theme...",
   "affectation":"Assignment",
   "approximate":"Approximate",
   "backToBuildingList":"Return to building list",
+  "bringToFront":"Bring to front",
   "building":"Building",
   "buildingAnomalies":"Building's anomalies",
   "buildingContact": "Building's contacts",
@@ -29,6 +31,7 @@
   "cancel":"Cancel",
   "capacity":"Capacity",
   "cellular":"Cellular",
+  "circle": "Cercle",
   "choose":"Choose...",
   "chooseFireStation":"Choose a fire station",
   "code":"Code",
@@ -56,7 +59,10 @@
   "courseLaneDetail":"Lane detail",
   "courseLaneValidationMessage":"You must select a fire station before choosing a lane.",
   "courseOrderChange":"Change order",
+  "crop": "Crop",
+  "cross": "Cross",
   "date":"Date",
+  "delete": "Delete",
   "description":"Description",
   "detached":"Detached",
   "dieValidationMessage":"*DIE must be an integer equal or superior to 0.",
@@ -64,6 +70,7 @@
   "division":"Division",
   "done":"Done",
   "doorHangerLeft":"Door hanger left",
+  "edition":"Edition",
   "extension":"Extension",
   "finish":"Finish",
   "fireAlarmPanel":"Alarm panel",
@@ -91,6 +98,7 @@
   "garage":"Garage",
   "gasInlet":"Gaz inlet",
   "generalInformation":"General information",
+  "group": "Group",
   "hazardousMaterial":"Hazardous materials",
   "hazardousMaterialDelete":"Delete this hazardous material...",
   "hazardousMaterialDeleteQuestion":"Do you really want to delete this material ?",
@@ -120,6 +128,7 @@
   "laneRequired":"*The lane is required.",
   "lastName":"Last name",
   "lastNameRequired":"*The last name is required.",
+  "line": "Line",
   "loading":"Loading...",
   "Localization":"Localization",
   "login":"LOG IN",
@@ -166,6 +175,7 @@
   "quantity":"Quantity",
   "quantityValidationMessage":"*The quantity must be a valid integer.",
   "reason":"Reason",
+  "rectangle": "Rectangle",
   "risk":"Risk",
   "riskLevel": "Risk level",
   "roof":"Roof",
@@ -174,6 +184,7 @@
   "search":"Search",
   "searchHolder":"Search...",
   "securityPerimeter":"Security perimeter",
+  "sendToBack":"Send to back",
   "siding":"Siding",
   "start": "Start",
   "street":"Street",
@@ -189,6 +200,7 @@
   "tankTypeUndetermined":"Undetermined",
   "tankTypeUnderground":"Underground",
   "tankTypeAboveground":"Aboveground",
+  "text": "Text",
   "theme":"Theme",
   "themeCreationTitle":"New theme",
   "themeCreationMessage":"Enter the new theme name",
@@ -196,6 +208,7 @@
   "themeSelection":"Theme selection",
   "themeValidationMessage":"*The theme must not be empty.",
   "transversal":"Transversal",
+  "triangle": "Triangle",
   "type":"Type",
   "typeRequired":"*The type is required.",
   "unit":"Unit",
