feat(#15) : Add cartography for fire hydrant location

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -207,6 +207,7 @@
   "quantity":"Quantity",
   "quantityValidationMessage":"*The quantity must be a valid integer.",
   "reason":"Reason",
+  "requiredInformation":"*This information is required.",
   "rectangle": "Rectangle",
   "risk":"Risk",
   "riskLevel": "Risk level",
