--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -208,6 +208,7 @@
   "quantityValidationMessage":"*La quantité doit être une valeur entière valide.",
   "reason":"Raison",
   "rectangle": "Rectangle",
+  "requiredInformation":"*Cette information est requise.",
   "risk":"Risque",
   "riskLevel": "Niveau de risque",
   "roof":"Toit",
