feat(#97) Adding translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -70,6 +70,7 @@
   "division":"Division",
   "done":"Done",
   "doorHangerLeft":"Door hanger left",
+  "editPicture": "Edit picture",
   "edition":"Edition",
   "extension":"Extension",
   "finish":"Finish",
