--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -71,6 +71,7 @@
   "division":"Section",
   "done":"Terminer",
   "doorHangerLeft":"Accroche-porte laissé",
+  "editPicture": "Modifier l'image",
   "edition":"Édition",
   "extension":"Extension",
   "finish":"Terminer",
