feat(#15): add permission validation message on localization

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -160,6 +160,7 @@
   "line": "Line",
   "loading":"Loading...",
   "localization":"Localization",
+  "localizationServiceDisabled":"The localization service is disabled, please activate it to use cartography.",
   "locate":"Locate",
   "location":"Location",
   "login":"LOG IN",
