feat(#15) Add localization cartography

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,6 +32,7 @@
   "buildings":"Buildings",
   "cancel":"Cancel",
   "capacity":"Capacity",
+  "cartographyLocation":"Cartography positioning",
   "cellular":"Cellular",
   "circle": "Cercle",
   "choose":"Choose...",
@@ -159,6 +160,7 @@
   "line": "Line",
   "loading":"Loading...",
   "localization":"Localization",
+  "locate":"Locate",
   "location":"Location",
   "login":"LOG IN",
   "loginError":"Username or password invalid",
