--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -33,6 +33,7 @@
   "buildings":"Batîments",
   "cancel":"Annuler",
   "capacity":"Capacité",
+  "cartographyLocation":"Positionnement cartographique",
   "cellular":"Cellulaire",
   "circle": "Cercle",
   "choose":"Choisir...",
@@ -159,6 +160,7 @@
   "line": "Ligne",
   "loading":"Chargement...",
   "localization":"Localisation",
+  "locate":"Positionner",
   "location":"Emplacement",
   "login":"CONNEXION",
   "loginError":"Nom d'usager ou mot de passe incorrect.",
