feat(#15) : optimize fire hydrant display + hot fix on translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -64,6 +64,7 @@
   "courseLaneDetail":"Lane detail",
   "courseLaneValidationMessage":"You must select a fire station before choosing a lane.",
   "courseOrderChange":"Change order",
+  "createFireHydrant":"Create a fire hydrant",
   "crop": "Crop",
   "cross": "Cross",
   "date":"Date",
@@ -77,9 +78,9 @@
   "doorHangerLeft":"Door hanger left",
   "enumAddressLocalisationType":{
     "NextTo":"Next to",
-    "AtTheAddress":" At the address",
-    "BackWard":" Backward",
-    "AtEnd":" At the end",
+    "AtTheAddress":"At the address",
+    "BackWard":"Backward",
+    "AtEnd":"At the end",
     "AtCorner":"At the corner",
     "Above":"Above",
     "Under":"Under",
@@ -221,6 +222,7 @@
   "searchHolder":"Search...",
   "securityPerimeter":"Security perimeter",
   "sendToBack":"Send to back",
+  "settings":"Settings",
   "siding":"Siding",
   "start": "Start",
   "street":"Street",
