--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -65,6 +65,7 @@
   "courseLaneDetail":"Détails de la voie",
   "courseLaneValidationMessage":"Vous devez sélectionner une caserne avant de pouvoir ajouter une rue.",
   "courseOrderChange":"Changer l'ordre",
+  "createFireHydrant":"Créer une borne",
   "crop": "Rogner",
   "cross": "Croix",
   "date":"Date",
@@ -221,6 +222,7 @@
   "searchHolder":"Recherche...",
   "securityPerimeter":"Périmètre de sécurité",
   "sendToBack":"Mettre à l'arrière",
+  "settings":"Configurations",
   "siding":"Revêtement",
   "start": "Démarrer",
   "street":"Rue",
