feat(#15) Translate select popup buttons

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,6 @@
   "addAnomalyButton":"Add an anomaly...",
   "addButton":"Add...",
   "addContactButton":"Add a contact...",
-  "addFireHydrantButton":"Add a fire hydrant...",
   "addFirePanelAlarmButton":"Add a alarm panel...",
   "addFireSprinklerButton":"Add a fire sprinkler...",
   "addHazardousMaterialButton":"Add hazardous material...",
@@ -64,7 +63,7 @@
   "courseLaneDetail":"Lane detail",
   "courseLaneValidationMessage":"You must select a fire station before choosing a lane.",
   "courseOrderChange":"Change order",
-  "createFireHydrant":"Create a fire hydrant",
+  "createFireHydrantButton":"Create a new fire hydrant...",
   "crop": "Crop",
   "cross": "Cross",
   "date":"Date",
