feat(#128) Hot fix on translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "anomalies":"Anomalies",
   "anomalyDelete":"Delete anomaly",
-  "anomalyDeleteQuestion":"Do you really want to delete this anomaly ?",
+  "anomalyDeleteQuestion":"Do you really want to delete this anomaly?",
   "anomalyDetail":"Anomaly details",
   "anomalyLeaveMessage":"The anomaly contains some validation errors and has not been saved. Do you still want to go to the building's anomalies list?",
   "absence":"Absence",
@@ -25,7 +25,7 @@
   "buildingContact": "Building's contacts",
   "buildingDetail":"Building's details",
   "buildingHazardousMaterial":"Building's hazardous material",
-  "buildingLeaveMessage":"The building details contains some validation errors and has not been saved. Do you still want to go to previous page?",
+  "buildingLeaveMessage":"The building's details contains some validation errors and has not been saved. Do you still want to go to previous page?",
   "buildingList":"Building list",
   "buildingPnaps":"Building's PNAPS",
   "buildings":"Buildings",
@@ -33,7 +33,7 @@
   "capacity":"Capacity",
   "cartographyLocation":"Cartography positioning",
   "cellular":"Cellular",
-  "circle": "Cercle",
+  "circle": "Circle",
   "choose":"Choose...",
   "chooseFireStation":"Choose a fire station",
   "civicNumber":"Civic #",
@@ -48,7 +48,7 @@
   "contact":"Contact",
   "contacts":"Contacts",
   "contactDeleteButton": "Delete this contact",
-  "contactDeleteQuestion":"Do you really want to delete this contact ?",
+  "contactDeleteQuestion":"Do you really want to delete this contact?",
   "contactDetail":"Contact details",
   "contactLeaveMessage":"The contact contains some validation errors and has not been saved. Do you still want to go to the building's contact list?",
   "container":"Container",
@@ -91,7 +91,7 @@
     "Address":"Address",
     "LaneAndIntersection":"Lane and intersection",
     "Coordinates":"Geolocation",
-    "Text":"Approximative location"
+    "Text":"Approximate location"
   },
   "editPicture": "Edit picture",
   "edition":"Edition",
@@ -100,7 +100,7 @@
   "fireAlarmPanel":"Alarm panel",
   "fireAlarmPanelDelete":"Delete this alarm panel",
   "fireAlarmPanelDeleteQuestion":"Do you really want to delete this alarm panel?",
-  "fireAlarmPanelDetail":"Alarm panel details",
+  "fireAlarmPanelDetail":"Alarm panel's details",
   "fireAlarmPanelLeaveMessage":"The alarm panel contains some validation errors and has not been saved. Do you still want to go to the building's fire safety list?",
   "fireHydrantDelete":"Delete fire hydrant",
   "fireHydrantDeleteQuestion":"Do you really want to delete the link between this fire hydrant and the building?",
@@ -114,8 +114,8 @@
   "fireSafety":"Fire safety",
   "fireSprinkler":"Fire sprinklers",
   "fireSprinklerDelete":"Delete fire sprinkler",
-  "fireSprinklerDeleteQuestion":"Do you really want to delete this sprinkler ?",
-  "fireSrinklerDetail":"Fire sprinkler details",
+  "fireSprinklerDeleteQuestion":"Do you really want to delete this sprinkler?",
+  "fireSrinklerDetail":"Fire sprinkler's details",
   "fireSprinklerLeaveMessage":"The sprinkler contains some validation errors and has not been saved. Do you still want to go to the building's fire safety list?",
   "fireStation":"Fire station",
   "fireStationRequired":"*Fire station is required.",
@@ -130,7 +130,7 @@
   "group": "Group",
   "hazardousMaterial":"Hazardous materials",
   "hazardousMaterialDelete":"Delete this hazardous material...",
-  "hazardousMaterialDeleteQuestion":"Do you really want to delete this material ?",
+  "hazardousMaterialDeleteQuestion":"Do you really want to delete this material?",
   "hazardousMaterialDetail":"Hazardous material details",
   "hazardousMaterialLeaveMessage":"The hazardous material contains some validation errors and has not been saved. Do you still want to go to the building's hazardous material list?",
   "height":"Height",
@@ -152,10 +152,9 @@
   "inspectionVisit":"Inspection visit",
   "lane":"Lane",
   "laneDeleteButton":"Delete the lane",
-  "laneDeleteQuestion":"Do you really want to delete this lane ?",
-  "laneLeaveMessage":"This lane contains some validation errors and has not been saved. Do you still want to go to the previous page ?",
+  "laneDeleteQuestion":"Do you really want to delete this lane?",
+  "laneLeaveMessage":"This lane contains some validation errors and has not been saved. Do you still want to go to the previous page?",
   "laneRequired":"*The lane is required.",
-  "lastName":"Last name",
   "lastNameRequired":"*The last name is required.",
   "line": "Line",
   "loading":"Loading...",
@@ -168,8 +167,9 @@
   "logout":"LOG OUT",
   "material":"Material",
   "matricule":"Matricule",
-  "measurement":"Dimension",
+  "measurement":"Measurement",
   "measuringUnitRequired":"*The measuring unit is required.",
+  "name":"Name",
   "new":"New...",
   "no":"No",
   "notes":"Notes",
@@ -187,15 +187,13 @@
   "particularRiskFloor":"Floor",
   "password":"Password",
   "phone":"Phone",
-  "photoDeleteQuestion":"Do you really want to delete this photo ?",
+  "photoDeleteQuestion":"Do you really want to delete this photo?",
   "pipingLocation":"Piping localization",
   "pnaps":"PNAPS",
   "pnapDayResident":"Day resident",
   "pnapDeleteButton":"Delete this PNAP",
-  "pnapDeleteQuestion":"Do you really want to delete this PNAP ?",
-  "pnapDetail":"PNAP details",
-  "pnapDetailContactNameHolder":"Name of the contact",
-  "pnapDetailNameHolder":"Name of the person",
+  "pnapDeleteQuestion":"Do you really want to delete this PNAP?",
+  "pnapDetail":"PNAP's details",
   "pnapEveningResident":"Evening resident",
   "pnapLeaveMessage":"The PNAP contains some validation errors and has not been saved. Do you still want to go to the building's PNAP list ?",
   "pnapNightResident":"Night resident",
@@ -228,7 +226,7 @@
   "supply":"Supply",
   "survey":"Survey",
   "surveyCompletedMessage":"The survey is completed, redirecting to the survey summary.",
-  "surveyNextQuestion":"Previous",
+  "surveyNextQuestion":"Next",
   "surveyPreviousQuestion":"Previous",
   "surveyRequired":"Please answer the survey to complete inspection.",
   "surveySummary":"Survey summary",
@@ -245,14 +243,14 @@
   "themeSelection":"Theme selection",
   "themeValidationMessage":"*The theme must not be empty.",
   "to":"To",
-  "transversal":"Transversal",
+  "transversal":"Cross street",
   "triangle": "Triangle",
   "type":"Type",
   "typeRequired":"*The type is required.",
   "unit":"Unit",
   "userName":"User name",
-  "visitCanceled": "Visit canceled",
-  "visitCanceledMotive":"Cancelation motive",
+  "visitCanceled": "Visit cancelled",
+  "visitCanceledMotive":"Cancellation motive",
   "visitNewSchedule":"New visit date",
   "visitRefused": "Visit refused",
   "visitRefusedMotive": "Refusal motive",
@@ -265,14 +263,5 @@
   "warning":"Warning",
   "waterSupplies":"Water supplies",
   "weakened":"Weakened",
-  "yes":"Yes",
-
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
-    "sourceMap": true
-  },
-  "exclude": [
-    "node_modules"
-  ]
+  "yes":"Yes"
 }
