--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -22,10 +22,10 @@
   "backToBuildingList":"Retourner à la liste des batîments",
   "bringToFront":"Mettre à l'avant",
   "building":"Batîment",
-  "buildingAnomalies":"Anomalies du btaîment",
+  "buildingAnomalies":"Anomalies du batîment",
   "buildingContact": "Contacts du batîment",
-  "buildingDetail":"Détails du batîmnet",
-  "buildingHazardousMaterial":"Matières dangereuses du batîmnent",
+  "buildingDetail":"Détails du batîment",
+  "buildingHazardousMaterial":"Matières dangereuses du batîment",
   "buildingLeaveMessage":"Le détail du batîments contient des erreurs de validation et n'a pas été sauvegardé. Voulez-vous quand même retourner à la page précédente?",
   "buildingList":"Liste des batîments",
   "buildingPNAPS":"PNAPS du batîment",
@@ -36,7 +36,7 @@
   "cellular":"Cellulaire",
   "circle": "Cercle",
   "choose":"Choisir...",
-  "chooseFireStation":"Choose a fire station",
+  "chooseFireStation":"Choisir une caserne",
   "civicNumber":"# civique",
   "code":"Code",
   "collectorLocation":"Emplacement collecteur",
@@ -102,21 +102,21 @@
   "fireAlarmPanelDelete":"Supprimer ce panneau d'alarme",
   "fireAlarmPanelDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce panneau d'alarme ?",
   "fireAlarmPanelDetail":"Détails du panneau d'alarme",
-  "fireAlarmPanelLeaveMessage":"Le panneaux d'alarme contient des erreurs de validation et n'a pas été sauvegardé.  Voulez-vous quand même retourner à la page des protections incendie du bâtiment?",
+  "fireAlarmPanelLeaveMessage":"Le panneau d'alarme contient des erreurs de validation et n'a pas été sauvegardé. Voulez-vous quand même retourner à la page des protections incendie du bâtiment ?",
   "fireHydrantDelete":"Suppression de borne",
-  "fireHydrantDeleteQuestion":"Êtes-vous sûre de vouloir supprimer l'association de cette borne au batîment?",
+  "fireHydrantDeleteQuestion":"Êtes-vous sûre de vouloir supprimer l'association de cette borne au batîment ?",
   "fireHydrantDetail":"Détails de la borne",
   "fireHydrantGeoPositionHolder":"Cliquer sur la carte pour localiser...",
-  "fireHydrantLeaveMessage":"La borne incendie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la liste des bornes de la ville?",
+  "fireHydrantLeaveMessage":"La borne incendie contient des erreurs de validation et n'a pas été sauvegardée. Voulez-vous quand même retourner à la liste des bornes de la ville ?",
   "fireHydrantList":"Liste des bornes incendie",
   "fireHydrants":"Bornes incendie",
   "fireResistance":"Résistance au feu",
   "fireSafety":"Protection incendie",
   "fireSprinkler":"Gicleurs incendie",
   "fireSprinklerDelete":"Supprimer le gicleur",
-  "fireSprinklerDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce gicleur?",
+  "fireSprinklerDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce gicleur ?",
   "fireSrinklerDetail":"Détails du gicleur incendie",
-  "fireSprinklerLeaveMessage":"Le gicleur contient des erreurs de validation et n'a pas été sauvegardé.  Voulez-vous quand même retourner à la page des protections incendie du bâtiment?",
+  "fireSprinklerLeaveMessage":"Le gicleur contient des erreurs de validation et n'a pas été sauvegardé. Voulez-vous quand même retourner à la page des protections incendie du bâtiment ?",
   "fireStation":"Caserne",
   "fireStationRequired":"La caserne est obligatoire",
   "firstName":"Prénom",
@@ -132,7 +132,7 @@
   "hazardousMaterialDelete":"Supprimer cette matière...",
   "hazardousMaterialDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette matière dangereuse ?",
   "hazardousMaterialDetail":"Détails de la matière dangereuse",
-  "hazardousMaterialLeaveMessage":"La matière contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page des matières dangereuses du bâtiment ?",
+  "hazardousMaterialLeaveMessage":"La matière contient des erreurs de validation et n'a pas été sauvegardée. Voulez-vous quand même retourner à la page des matières dangereuses du bâtiment ?",
   "height":"Hauteur",
   "heightValidationMessage":"*La hauteur doit être une valeur décimale de format valide (ex.: 9999.99).",
   "homePhone":"Téléphone domicile",
@@ -153,9 +153,8 @@
   "lane":"Voie",
   "laneDeleteButton":"Supprimer la voie",
   "laneDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette voie ?",
-  "laneLeaveMessage":"La voie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page précédente?",
+  "laneLeaveMessage":"La voie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page précédente ?",
   "laneRequired":"*La voie est requise.",
-  "lastName":"Nom",
   "lastNameRequired":"Le nom est requis.",
   "line": "Ligne",
   "loading":"Chargement...",
@@ -168,13 +167,14 @@
   "logout":"Quitter",
   "material":"Matériel",
   "matricule":"Matricule",
-  "measurement":"Measurement",
+  "measurement":"Dimensions",
   "measuringUnitRequired":"*L'unité de mesure est requise.",
+  "name":"Nom",
   "new":"Nouvelle...",
   "no":"Non",
   "notes":"Notes",
   "number":"Numéro",
-  "opening":"Ouveture",
+  "opening":"Ouverture",
   "operator":"Opérateur",
   "otherInformation":"Autres informations",
   "otherPhone":"Autre téléphone",
@@ -194,10 +194,8 @@
   "pnapDeleteButton":"Supprimer le PNAP",
   "pnapDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce PNAP ?",
   "pnapDetail":"Détails du PNAP",
-  "pnapDetailContactNameHolder":"Nom du contact",
-  "pnapDetailNameHolder":"Nom de la personne",
   "pnapEveningResident":"Résident de soir",
-  "pnapLeaveMessage":"Le PNAP contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la liste des PNAPS du batîment?",
+  "pnapLeaveMessage":"Le PNAP contient des erreurs de validation et n'a pas été sauvegardée. Voulez-vous quand même retourner à la liste des PNAPS du batîment ?",
   "pnapNightResident":"Résident de nuit",
   "pnapNumber":"Nombre",
   "pnapNumberValidationMessage":"*Le nombre doit être une valeur entière valide.",
@@ -228,6 +226,7 @@
   "supply":"Alimentation",
   "survey":"Questionnaire",
   "surveyCompletedMessage":"Le questionnaire est complété, redirection vers le résumé du questionnaire.",
+  "surveyNextQuestion":"Suivante",
   "surveyPreviousQuestion":"Précédente",
   "surveyRequired":"Veuillez remplir le questionnaire pour compléter l'inpection.",
   "surveySummary":"Résumé du questionnaire",
@@ -264,14 +263,5 @@
   "warning":"Avertissement",
   "waterSupplies":"Alimentation en eau",
   "weakened":"Affaibli",
-  "yes":"Oui",
-
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
-    "sourceMap": true
-  },
-  "exclude": [
-    "node_modules"
-  ]
+  "yes":"Oui"
 }
