feat(#132) Add fonction to disable and refresh menu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -178,6 +178,7 @@
   "operator":"Operator",
   "otherInformation":"Other information",
   "otherPhone":"Other phone",
+  "otherUserInspection":"This inspection is in progress by another user",
   "outflow":"Outflow",
   "owner":"Owner",
   "ownerAbsent":"Owner absent",
