--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -178,6 +178,7 @@
   "operator":"Opérateur",
   "otherInformation":"Autres informations",
   "otherPhone":"Autre téléphone",
+  "otherUserInspection":"Cette inspection est en traitement par un autre usager",
   "outflow":"Débit",
   "owner":"Propriétaire",
   "ownerAbsent":"Propriétaire absent",
