feat(#150) Refactoring + hot fix on start, cancel or refuse inspection visit

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -250,6 +250,7 @@
   "typeRequired":"*The type is required.",
   "unit":"Unit",
   "userName":"User name",
+  "UserNotAllowedInspection":"You are not allowed to access this inspection",
   "visitCanceled": "Visit cancelled",
   "visitCanceledMotive":"Cancellation motive",
   "visitNewSchedule":"New visit date",
