Feat(#155) string value for GarageType was making binding behave incorrectly with initial value.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -93,6 +93,11 @@
     "Coordinates":"Geolocation",
     "Text":"Approximate location"
   },
+  "enumGarageType": {
+    "No": "No",
+    "Yes": "Yes",
+    "Detached": "Detached"
+  },
   "editPicture": "Edit picture",
   "edition":"Edition",
   "extension":"Extension",
