feat(#131) Manage and validate answers group

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -232,6 +232,7 @@
   "supply":"Supply",
   "survey":"Survey",
   "surveyCompletedMessage":"The survey is completed, redirecting to the survey summary.",
+  "surveyDeleteQuestionGroup":"Do you really want to delete this question group?",
   "surveyNextQuestion":"Next",
   "surveyPreviousQuestion":"Previous",
   "surveyRequired":"Please answer the survey to complete inspection.",
