--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -231,6 +231,7 @@
   "street":"Rue",
   "supply":"Alimentation",
   "survey":"Questionnaire",
+  "surveyChangingAnswerQuestion":"Cette modification réinitialisera le reste du questionnaire, voulez-vous continuer ?",
   "surveyCompletedMessage":"Le questionnaire est complété, redirection vers le résumé du questionnaire.",
   "surveyDeleteQuestionGroup":"Êtes-vous sûre de vouloir supprimer ce groupe de question ?",
   "surveyNextQuestion":"Suivante",
