--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -26,7 +26,7 @@
     "confirmYourFingerprint": "Confirmer votre empreinte digitale",
     "loginWith": "Connexion par biométrie",
     "useToLogin": "Utilisé votre identifiant biométrique pour accéder plus rapidement et plus facilement à votre compte",
-    "rememberIfSomeoneSaveIsFingerprint": "N'oubliez pas que si quelqu'un a enregistré ses informations biométrique sur cet appareil, il aura accès à votre compte."
+    "rememberIfSomeoneSaveIsFingerprint": "N'oubliez pas que si quelqu'un a enregistré ses informations biométriques sur cet appareil, il aura accès à votre compte."
   },
   "bringToFront":"Mettre à l'avant",
   "building":"Batîment",
