feat(#186) Adapt fire Hydrant new structure in mobile

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -190,6 +190,13 @@
   "number":"Number",
   "opening":"Opening",
   "operator":"Operator",
+  "enumOperatorType": {
+    "Equal":"=",
+    "Greater":">",
+    "GreaterOrEqual":">=",
+    "Less":"<",
+    "LessOrEqual":"<="
+  },
   "otherInformation":"Other information",
   "otherPhone":"Other phone",
   "otherUserInspection":"This inspection is in progress by another user",
